TEST_PROGRAMS/VALID/02/shortformfunction.go
package main

// Long form, one id with one type
func f(a, b int, c string, d int) {
    return
}

func main(){
    f(4,5,"hi",6);
}
