TEST_PROGRAMS/INVALID/07/functions.go
// go lecture (6), slide 8
package main

func f(a int, b int, c string, d int) {
	return
}

func f(a, b int, c string, d int) string {
	return c
}

func f(a,b) {
	return c
}

func main () {
}
